# MortageCalc

./: .travis.yml  DISCLAIMER  LICENSE  Mortage.hs  MortageCalc.hs  MortgageCalc.cabal  Payment.hs  README.md  SimpleDTime.hs  dtime-test.hs  mortage-test1.hs  mortage-test2.hs  payment-test.hs
app/: Main.hs
src/: Mortgage.hs
src/Mortgage/: Money.hs
test/: Spec.hs
