name:                MortgageCalc
version:             0.1.1
synopsis:            Command line Mortgage Calculator
description:         Please see README.md
homepage:            https://github.com/wangbj/MortgageCalc#readme
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           2016 Baojun Wang
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mortgage
                     , Mortgage.Money 
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , optparse-applicative >= 0.14
                     , QuickCheck >= 2.9
                     , mtl >= 2.2
                     , time >= 1.6
  default-language:    Haskell2010

executable MortgageCalc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers >= 0.5
                     , optparse-applicative >= 0.14
                     , QuickCheck >= 2.9
                     , mtl >= 2.2
                     , time >= 1.6
                     , MortgageCalc
  default-language:    Haskell2010

test-suite MortgageCalc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck >= 2.9
                     , containers >= 0.5
                     , mtl >= 2.2
                     , time >= 1.6
                     , MortgageCalc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/MortgageCalc
